testsuite/tests/lexical_envs/invalid_subunit_root/bad_main_rule_2.lkt
grammar foo_grammar {
    @main_rule main_rule <-
        ASTList[ExampleWrapper]+(ExampleWrapper(Example("example")))
}
